Cambios realizados desde el spyke acordados por el grupo.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Permisos.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Permisos.cshtml
@@ -13,12 +13,12 @@
     // Si el usuario tiene permisos en el sistema.
     if (permisos_usuario != null)
     {
-        if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.CALIFICAR_CURSOS))
+        if (permisos_usuario.verificar_permiso("SC-01234", 1, IdPermiso.VER_CURSOS))
         {
-            <b>Este html se inserta si el usuario puede calificar un curso</b>
+            <b>Este html se inserta si el usuario puede ver cursos</b>
         }
 
-        if (permisos_usuario.verificar_permiso("SC-01234", 1, IdPermiso.ASIGNAR_FORMUALRIO))
+        if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ASIGNAR_FORMUALRIO))
         {
             <b>Esto es un html de un usuario que puede asignar un formulario</b>
         }
