--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <div class="dropdown-contentt">
                         @Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")
                         @Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")
+                        @Html.ActionLink("Cargar archivo", "CargarArchivo", "Administrador")
                     </div>
                 </div>
                 <div class="dropdown">
