--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -9,7 +9,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Nombre)
+            Formularios
         </th>
         <th></th>
     </tr>
