--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Details.cshtml
@@ -36,12 +36,16 @@
     </td>
 }
 
-@{int id_counter = 0; int seccion_counter = 0; bool? observation = true;}
+
+@{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; int item_actual = 0;}
 
     <div class="panel-group" id="accordion1">
 
         @foreach (var formulario in Model.Conformado_Item_Sec_Form)
         {
+            seccion_actual = formulario.TituloSeccion;
+
+            @*Se ocupa poner una restriccion para no mostrar seciones repetidas*@
 
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -56,10 +60,12 @@
 
                         <div class="panel-group" id="accordion2_@id_counter">
 
-                            @foreach (var seccion in Model.Conformado_Item_Sec_Form.Take(2))
+                            @foreach (var seccion in Model.Conformado_Item_Sec_Form)
                             {
-                                @*Poner condicion para mostrar unicamente las preguntas correspondientes a una seccion en especifico*@
+                                item_actual = seccion.Item.ItemId;
 
+                                if (seccion.TituloSeccion == seccion_actual && seccion.ItemId == item_actual)
+                                {
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
@@ -76,37 +82,37 @@
                                                     <a>Resultados</a> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
                                                 }
 
-                                                    <div class="panel-group" id="accordion3_@seccion_counter">
+                                                <div class="panel-group" id="accordion3_@seccion_counter">
 
-                                                        @if (seccion.Item.TieneObservacion == observation)
-                                                        {
-                                                            <div class="panel panel-default">
-                                                                <div class="panel-heading">
-                                                                    <h4 class="panel-title">
-                                                                        <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
-                                                                            Observaciones @*Aqui se muestran las observaciones relacionadas a una pregunta, si la pregunta es tipo texto estas cuentas como las respuestas*@
-                                                                        </a>
-                                                                    </h4>
-                                                                </div>
-                                                                <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
-                                                                    <div class="panel-body">
+                                                    @if (seccion.Item.TieneObservacion == observation)
+                                                    {
+                                                        <div class="panel panel-default">
+                                                            <div class="panel-heading">
+                                                                <h4 class="panel-title">
+                                                                    <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
+                                                                        Observaciones @*Aqui se muestran las observaciones relacionadas a una pregunta, si la pregunta es tipo texto estas cuentas como las respuestas*@
+                                                                    </a>
+                                                                </h4>
+                                                            </div>
+                                                            <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
+                                                                <div class="panel-body">
 
-                                                                        @foreach (var item in Model.Conformado_Item_Sec_Form)
-                                                                        {
-                                                                            @Html.DisplayFor(model => item.Item.Categoria) @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
-                                                                        }
+                                                                    @foreach (var item in Model.Conformado_Item_Sec_Form)
+                                                                    {
+                                                                        @Html.DisplayFor(model => item.Item.Categoria) @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
+                                                                    }
 
-                                                                    </div>
                                                                 </div>
                                                             </div>
-                                                        }
-                                                    </div>
+                                                        </div>
+                                                    }
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
 
                                     seccion_counter++;
-                               
+                                }
                             }
                         </div>
 
