Revert "Merge branch 'TheStrategists' into SebastianVargas"
This reverts commit 31fe984ce38543fc787d0d1814d9b612e3632226, reversing
changes made to d313e7867114fe88f4a8bf03efffd651c8df8904.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -4,3 +4,12 @@
 
 <h1>Home</h1>
 
+<div>
+    @Html.ActionLink("Formularios", "Index", "Formulario")<br />
+    @Html.ActionLink("Secciones", "Index", "Seccion")<br />
+    @Html.ActionLink("Preguntas", "Index", "Item")<br />
+    @Html.ActionLink("Selecion Unica", "Index", "Seleccion_Unica")<br /> @*Esto no cumple DoD, necesitamos editarlo ASAP*@
+    @Html.ActionLink("Texto Libre", "Index", "Texto_Libre")<br />
+    @Html.ActionLink("Formulario Resuelto", "Index", "Responde")
+</div>
+
