--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -52,7 +52,6 @@
                     <div class="dropdown-contentt">
                         @Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")
                         @Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")
-                        @Html.ActionLink("Cargar archivo", "CargarArchivo", "Administrador")
                     </div>
                 </div>
 
@@ -71,7 +70,7 @@
                     </div>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth")</li>
+                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Auth")</li>
                 </ul>
             </div>
         </div>
