Creacion de las vistas parciales de Preguntas y secciones.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/preguntasVParcial.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/preguntasVParcial.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<Opiniometro_WebApp.Models.Item>
+﻿@model List<Opiniometro_WebApp.Models.Item>
 
-<table class = "table-bordered">
+<table class = "table table-bordered">
     <tr>
         <td>
             @Html.Label("Código")
