--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -2,4 +2,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<thead>
+    <tbody>
+    <tr>
+        <td>
+            @Html.Action("preguntasVParcial")
+            @Html.Action("seccionesVParcial")
+        </td>
+
+    </tr>
+
+    </tbody>
+
+</thead>
 
