Añadi Vistas paraciales a asignar preguntas.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -6,8 +6,14 @@
     <tbody>
     <tr>
         <td>
-            @Html.Action("preguntasVParcial")
-            @Html.Action("seccionesVParcial")
+            <div style="display: inline-block;">
+                @Html.Action("preguntasVParcial")
+            </div>
+            <div style="float:left;">
+                @Html.Action("seccionesVParcial")
+                
+            </div>
+            <div style="clear: both;"></div>
         </td>
 
     </tr>
