Arreglo de las posiciones de las tablas en la vista.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -6,13 +6,13 @@
     <tbody>
     <tr>
         <td>
-            <div style="display: inline-block;">
+            <div style="float: left; width: 500px; padding: 10px;">
                 @Html.Action("preguntasVParcial")
             </div>
-            <div style="float:left;">
+            <div style = "width: 500px; padding:  10px;">
                 @Html.Action("seccionesVParcial")
                 
-            </div>
+            </div="float:>
             <div style="clear: both;"></div>
         </td>
 
