--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -5,7 +5,7 @@
 }
 
 <thead>
-    <tbody>
+    
         <tr>
             <td>
                 Codigo: <input type="text" name="inputname" value="ABC123" readonly>
@@ -19,7 +19,7 @@
                     @Html.Action("seccionesVParcial")
                 </div>
 
-                <button>
+                <button disabled>
                     Añadir pregunta al formulario.
                 </button>
 
@@ -31,7 +31,7 @@
                 <div style="clear: both;"></div>
             </td>
         </tr>
-    </tbody>
+    
 </thead>
 
 
