--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
@@ -1,94 +1,23 @@
 ﻿@model IEnumerable<Opiniometro_WebApp.Models.Formulario_Respuesta>
 
-<div class="panel-group" id="accordion1">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">
-                    Collapsible Group Item #1
-                </a>
-            </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-            <div class="panel-body">Panel 1</div>
-        </div>
-    </div>
+<table class="table">
+    <tr>
+        <th>
+            Formularios
+        </th>
+        <th></th>
+    </tr>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">
-                    Collapsible Group Item #2
-                </a>
-            </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse">
-            <div class="panel-body">
-                <div class="panel-body">
-                    <h2>Heading</h2>
-                    <div class="panel-group" id="accordion21">
-                        <div class="panel">
-                            <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoOne">
-                                View details 2.1 &raquo;
-                            </a>
-                            <div id="collapseTwoOne" class="panel-collapse collapse">
-                                <div class="panel-body">Details 1</div>
-                            </div>
-                        </div>
-                        <div class="panel ">
-                            <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoTwo">
-                                View details 2.2 &raquo;
-                            </a>
-                            <div id="collapseTwoTwo" class="panel-collapse collapse">
-                                <div class="panel-body">Details 2</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Formulario.Nombre)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.Formulario.CodigoFormulario })
+            </td>
+        </tr>
+    }
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">
-                    Collapsible Group Item #3
-                </a>
-            </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse">
-            <div class="panel-body">
-
-                <div class="panel-group" id="accordion2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion2" href="#collapseThreeOne">
-                                    Collapsible Group Item #3.1
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThreeOne" class="panel-collapse collapse in">
-                            <div class="panel-body">Panel 3.1</div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion2" href="#collapseThreeTwo">
-                                    Collapsible Group Item #3.2
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThreeTwo" class="panel-collapse collapse">
-                            <div class="panel-body">Panel 3.2</div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-</div>
+</table>  
