--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Home Page";
 }
 
+@Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
+
 <h1>Home</h1>
 
 <div>
@@ -10,6 +12,7 @@
     @Html.ActionLink("Preguntas", "Index", "Item")<br />
     @Html.ActionLink("Selecion Unica", "Index", "Seleccion_Unica")<br /> @*Esto no cumple DoD, necesitamos editarlo ASAP*@
     @Html.ActionLink("Texto Libre", "Index", "Texto_Libre")<br />
-    @Html.ActionLink("Lista de Conformados", "Index", "Conformado_Item_Sec_Form")
+    @Html.ActionLink("Lista de Conformados", "Index", "Conformado_Item_Sec_Form")<br />
+    @Html.ActionLink("Visualizar Formularios", "Index", "VisualizarFormulario")
 </div>
 
